# -resolve-mdm-copilot

./: .env.example  .gitignore  README.md  env.example.example  mdm-domain-notes.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: ADR-001-open-source-stack-rationale.md  ADR-002-indexing-strategy.md  ADR-002-vector-indexing-strategy.md  ARCHITECTURE.md  LEARNING-RESOURCES.md  PRD.md  PROJECT-PROGRESS.md  SETUP.md
docs/diagrams/: architecture-v1.excalidraw
eval/: golden-set.csv  run_eval.py
scripts/: embed_notes.py  embed_steward_notes.py  load_synthea_patients.py  query_similar_notes.py  query_steward_notes.py  test_claude_hello.py  test_connection.py  test_hybrid_search.py  test_langsmith_trace.py  test_rerank_benchmark.py
scripts/sql/: 001_create_raw_schema.sql  002_create_staging_members.sql  002_verify_staging.sql  003_create_member_notes.sql  004_add_match_features.sql  005_fix_match_features.sql  006_vector_index_benchmark.sql  007_generate_match_candidates.sql  008_spot_check_candidates.sql  009_inject_synthetic_duplicates.sql  010_rescore_with_duplicates.sql  011_create_steward_notes.sql  012_steward_notes_hnsw_index.sql  013_rename_tables_verify.sql  014_add_cached_rationale_and_audit.sql  015_create_eval_runs.sql  016_hybrid_search_setup.sql  017_create_ops_queries.sql  018_anomaly_metrics.sql
src/resolve/: __init__.py
src/resolve/config/: __init__.py  settings.py
src/resolve/db/: __init__.py  connection.py
src/resolve/eval/: __init__.py  runner.py
src/resolve/ingestion/: __init__.py  (+2 more)
tests/unit/: test_placeholder.py
(+15 files in other folders)
