[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve-mdm-copilot"
version = "0.1.0"
description = "AI-Augmented MDM Steward Copilot for Healthcare"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aman Sharma"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
