[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-ai-copilot"
version = "0.2.0"
description = "AI Copilot for Operational Decision Review"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aman Sharma"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
